--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webfont-generator-cli",
-  "version": "2.1.12",
+  "version": "2.1.13",
   "description": "Easy-to-use, pre-configured cli tool to generate webfont icon kits from a bunch of .svg files",
   "main": "index.js",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "https://github.com/AdrianoCahete/webfont-generator-cli.git"
   },
   "bin": {
-    "webfont-generator-cli": "bin/icon-font-generator"
+    "webfont-generator-cli": "bin/webfont-generator-cli"
   },
   "scripts": {},
   "author": "Tancredi Trugenberger, Adriano Cahete",
